# IndicaAI

./: .gitignore  README.md  docker-compose.yml
API/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pom.xml
API/src/main/resources/: application.properties
API/src/main/resources/db/migration/: V1__create-tables-inicial.sql  (+6 more)
Microservice/: .gitignore  docker-compose.yml
Microservice/lockeAI/: Dockerfile  main.py  pyproject.toml
Microservice/reconhecimento-AI/: Dockerfile  consumer.py  main.py  pyproject.toml  worker.py
front-indicaai/: README.md  angular.json  package-lock.json  package.json
front-indicaai/src/: index.html  styles.scss
front-indicaai/src/app/: app.component.ts  app.config.ts  app.routes.ts  app.spec.ts
front-indicaai/src/app/cadastro/: cadastro.component.html  cadastro.component.scss  cadastro.component.ts
front-indicaai/src/app/funcionario/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
front-indicaai/src/app/funcionario/minhas-avaliacoes/: minhas-avaliacoes.component.html  minhas-avaliacoes.component.scss  minhas-avaliacoes.component.ts
front-indicaai/src/app/funcionario/perfil/: perfil.component.html  perfil.component.scss  perfil.component.ts
front-indicaai/src/app/login/: login.component.html  login.component.scss  login.component.ts
front-indicaai/src/app/services/: auth.interceptor.ts  auth.service.ts  avaliacao.ts  empresa.ts  funcionario.ts
indica.ai/: Dockerfile  package-lock.json  package.json
indica.ai/app/: layout.tsx
indica.ai/app/pending-approval/: page.tsx
indica.ai/app/profile/: page.tsx
indica.ai/app/search/: page.tsx
indica.ai/app/worker/[id]/: page.tsx
indica.ai/features/authentication/components/: CompanyRegisterForm.tsx  WorkerRegisterForm.tsx
indica.ai/features/authentication/contexts/: AuthContext.tsx
indica.ai/features/authentication/models/: user.tsx
indica.ai/features/authentication/services/: auth.service.ts
indica.ai/features/business/components/: company-profile.tsx
indica.ai/features/business/services/: company.service.ts
indica.ai/features/evaluations/services/: evaluation.service.ts
indica.ai/features/person/components/: worker-profile.tsx
indica.ai/lib/schemas/: profile.schema.ts  register.schema.ts
indica.ai/shared/components/: review-list.tsx
indica.ai/shared/components/ui/: tabs.tsx
lockeAI/: Readme.md  main.py
reconhecimento-AI/: pyproject.toml
(+46 files in other folders)
