[tool.poetry]
name = "reconhecimento-ai"
version = "0.1.0"
description = ""
authors = ["JoseFabioGuimaraes <jfabioguimaraes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
fastapi = ">=0.121.1,<0.122.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
python-multipart = ">=0.0.20,<0.0.21"
deepface = "==0.0.79"
tensorflow = "==2.15.0"
keras = "==2.15.0"
scipy = "1.11.4"
pika = "^1.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"