[tool.poetry]
name = "reconhecimento-ai"
version = "0.1.0"
description = "Serviço de Biometria Facial"
authors = ["JoseFabioGuimaraes <jfabioguimaraes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
insightface = "^0.7.3"
onnxruntime = ">=1.15.0"
opencv-python-headless = "<4.10"
requests = "^2.31.0"
pika = "^1.3.2"
ml-dtypes = ">=0.4.0"
numpy = "<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"